shorter and smaller disclaimer

--- a/src/_includes/partials/_footer.njk
+++ b/src/_includes/partials/_footer.njk
@@ -14,13 +14,13 @@
                 </div>
                 <div class="w-12"></div>
                 <div class="flex flex-col basis-2/3 items-end justify-end">
-                    <small class="font-thin">Disclaimer: This website is an independent project and is not officially affiliated with Romain Axisa.</small>
+                    <small class="font-thin text-xs">Disclaimer: This is an independent project and is not officially affiliated with Romain Axisa.</small>
                     <small class="font-thin">Copyrights &copy; 2023 | All rights reserved</small>
                 </div>
             </div>
         </div>
         <div class="flex flex-col py-4 items-center justify-center md:hidden">
-            <small class="font-thin">Disclaimer: This website is an independent project and is not officially affiliated with Romain Axisa.</small>
+            <small class="font-thin">Disclaimer: This is an independent project and is not officially affiliated with Romain Axisa.</small>
             <small class="font-thin">Copyrights &copy; 2023 | All rights reserved</small>
         </div>
     </section>
